# equival-ubuntu

./: AUTHORS  CMakeLists.txt  INSTALL  README.md  equival  quickbuild.sh
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
data/: CMakeLists.txt  equival.db  equival.desktop  equival.desktop.cmake  equival.desktop.in
debian/: changelog  control  copyright  rules
icons/: CMakeLists.txt
po/: CMakeLists.txt  en.po  equival.pot  es.po  fr.po
src/: CMakeLists.txt  comun.vala  config.vala  config.vala.cmake  configuration.vala  elemento.vala  equival.vala  holo-selector.vala  main.vala  special-entry.vala
